--- a/init.org
+++ b/init.org
@@ -135,6 +135,7 @@
            '(auto-compile         ; automatically compile Emacs Lisp libraries
              exec-path-from-shell ; sets exec-path and $PATH from shell (OS X)
              idle-require         ; load elisp libraries while Emacs is idle
+             git-gutter-fringe    ; Fringe version of git-gutter.el
              org))                ; Outline-based notes management and organizer
           ;; Remove all packages already installed
           (packages (cl-remove-if 'package-installed-p packages)))
@@ -221,3 +222,81 @@
    #+BEGIN_SRC emacs-lisp
    (fset 'yes-or-no-p 'y-or-n-p)
    #+END_SRC
+
+   To avoid file system clutter we put all auto saved files in a single
+   directory.
+
+   #+BEGIN_SRC emacs-lisp
+   (defvar emacs-autosave-directory
+     (concat user-emacs-directory "autosaves/")
+     "This variable dictates where to put auto saves. It is set to a
+     directory called autosaves located wherever your .emacs.d/ is
+     located.")
+
+   ;; Sets all files to be backed up and auto saved in a single directory.
+   (setq backup-directory-alist
+         `((".*" . ,emacs-autosave-directory))
+         auto-save-file-name-transforms
+         `((".*" ,emacs-autosave-directory t)))
+   #+END_SRC
+
+   Set =utf-8= as preferred coding system.
+
+   #+BEGIN_SRC emacs-lisp
+   (set-language-environment "UTF-8")
+   #+END_SRC
+
+
+** Modes
+
+   There are some modes that are enabled by default that I don't find
+   particularly useful. We create a list of these modes, and disable all of
+   these.
+
+   #+BEGIN_SRC emacs-lisp
+   (dolist (mode
+            '(tool-bar-mode                ; No toolbars, more room for text
+              scroll-bar-mode              ; No scroll bars either
+              blink-cursor-mode))          ; The blinking cursor gets old
+     (funcall mode 0))
+   #+END_SRC
+
+   Let's apply the same technique for enabling modes that are disabled by
+   default.
+
+   #+BEGIN_SRC emacs-lisp
+   (dolist (mode
+            '(column-number-mode           ; Show column number in mode line
+              delete-selection-mode        ; Replace selected text
+              show-paren-mode))            ; Highlight matching parentheses
+     (funcall mode 1))
+   #+END_SRC   
+ 
+
+** Visual
+   [[https://github.com/syohex/emacs-git-gutter-fringe][git-gutter-fringe]] gives a great visual indication of where you've made
+   changes since your last commit. There are several packages that performs
+   this task; the reason I've ended up with =git-gutter-fringe= is that it
+   reuses the (already present) fringe, saving a tiny bit of screen-estate.
+
+   I smuggled some configurations from [[https://github.com/torenord/.emacs.d/][torenord]], providing a cleaner look.
+
+   #+BEGIN_SRC emacs-lisp
+   (require 'git-gutter-fringe)
+
+   (dolist (p '((git-gutter:added    . "#0c0")
+                (git-gutter:deleted  . "#c00")
+                (git-gutter:modified . "#c0c")))
+     (set-face-foreground (car p) (cdr p))
+     (set-face-background (car p) (cdr p)))
+   #+END_SRC
+
+   New in Emacs 24.4 is the =prettify-symbols-mode=! It's neat.
+
+   #+BEGIN_SRC emacs-lisp
+   (setq-default prettify-symbols-alist '(("lambda" . ?λ)
+                                          ("delta" . ?Δ)
+                                          ("gamma" . ?Γ)
+                                          ("phi" . ?φ)
+                                          ("psi" . ?ψ)))
+   #+END_SRC  
