--- a/init.org
+++ b/init.org
@@ -9,12 +9,10 @@
 * Credit
 
   Original files that form the basis of this customized version were downloaded from Lars Tveito's GitHub repository, [[https://github.com/larstvei/dot-emacs.git]].
-
-
+  
 * About
 
   An attempt to try org-mode with tangle to keep my emacs configuration well documented.
-
 
 * Configurations
 ** Meta
@@ -134,9 +132,9 @@
    (let* ((packages
            '(auto-compile         ; automatically compile Emacs Lisp libraries
              exec-path-from-shell ; sets exec-path and $PATH from shell (OS X)
-             idle-require         ; load elisp libraries while Emacs is idle
+             idle-require         ; load emacs-lisp libraries while Emacs is idle
              git-gutter-fringe    ; Fringe version of git-gutter.el
-             org))                ; Outline-based notes management and organizer
+             org))                  ; Outline-based notes management and organizer
           ;; Remove all packages already installed
           (packages (cl-remove-if 'package-installed-p packages)))
      (when packages
@@ -147,6 +145,15 @@
                         (package-install 'exec-path-from-shell)))))
    #+END_SRC               
 
+** Use-Package
+   
+   #+BEGIN_SRC emacs-lisp
+   (unless (package-installed-p 'use-package)
+     (package-refresh-contents)
+     (package-install 'use-package))
+
+   (require 'use-package)   
+   #+END_SRC
 
 ** Mac OS X
 
@@ -161,7 +168,6 @@
    (when (memq window-system '(mac ns))
      (exec-path-from-shell-initialize))
    #+END_SRC
-
 
 ** Require
 
@@ -189,20 +195,20 @@
 
    We can set variables to whatever value we'd like using =setq=.
 
-   # #+BEGIN_SRC emacs-lisp
-   # (setq auto-revert-interval 1            ; Refresh buffers fast
-   #       custom-file (make-temp-file "")   ; Discard customization's
-   #       default-input-method "TeX"        ; Use TeX when toggling input method
-   #       echo-keystrokes 0.1               ; Show keystrokes asap
-   #       inhibit-startup-message t         ; No splash screen please
-   #       initial-scratch-message nil       ; Clean scratch buffer
-   #       recentf-max-saved-items 100       ; Show more recent files
-   #       ring-bell-function 'ignore        ; Quiet
-   #       sentence-end-double-space nil)    ; No double space
-   # ;; Some mac-bindings interfere with Emacs bindings.
-   # (when (boundp 'mac-pass-command-to-system)
-   #   (setq mac-pass-command-to-system nil))
-   # #+END_SRC
+   #+BEGIN_SRC emacs-lisp
+   (setq ;;auto-revert-interval 1            ; Refresh buffers fast
+         ;;custom-file (make-temp-file "")   ; Discard customization's
+         ;;default-input-method "TeX"        ; Use TeX when toggling input method
+         echo-keystrokes 0.1               ; Show keystrokes asap
+         inhibit-startup-message t         ; No splash screen please
+         initial-scratch-message nil       ; Clean scratch buffer
+         ;;recentf-max-saved-items 100       ; Show more recent files
+         ring-bell-function 'ignore        ; Quiet
+         sentence-end-double-space nil)    ; No double space
+   ;; Some mac-bindings interfere with Emacs bindings.
+   ;; (when (boundp 'mac-pass-command-to-system)
+   ;;   (setq mac-pass-command-to-system nil))
+   #+END_SRC
 
    Some variables are buffer-local, so changing them using =setq= will only
    change them in a single buffer. Using =setq-default= we change the
@@ -246,7 +252,6 @@
    (set-language-environment "UTF-8")
    #+END_SRC
 
-
 ** Modes
 
    There are some modes that are enabled by default that I don't find
@@ -272,7 +277,6 @@
      (funcall mode 1))
    #+END_SRC   
  
-
 ** Visual
    [[https://github.com/syohex/emacs-git-gutter-fringe][git-gutter-fringe]] gives a great visual indication of where you've made
    changes since your last commit. There are several packages that performs
@@ -300,3 +304,36 @@
                                           ("phi" . ?φ)
                                           ("psi" . ?ψ)))
    #+END_SRC  
+** Org
+
+   #+BEGIN_SRC emacs-lisp
+   (require 'org)
+   #+END_SRC
+
+** Org-ref
+
+   #+BEGIN_SRC emacs-lisp
+   (use-package org-ref
+     :ensure t)
+
+   (setq reftex-default-bibliography '("~/Dropbox/bibliography/references.bib"))
+
+   ;; see org-ref for use of these variables
+   (setq org-ref-bibliography-notes "~/Dropbox/bibliography/notes.org"
+         org-ref-default-bibliography '("~/Dropbox/bibliography/references.bib")
+         org-ref-pdf-directory "~/Dropbox/bibliography/bibtex-pdfs/")
+
+   (setq bibtex-completion-bibliography "~/Dropbox/bibliography/references.bib"
+         bibtex-completion-library-path "~/Dropbox/bibliography/bibtex-pdfs"
+         bibtex-completion-notes-path "~/Dropbox/bibliography/helm-bibtex-notes")
+
+   ;; open pdf with system pdf viewer (works on mac)
+   ;;(setq bibtex-completion-pdf-open-function
+   ;;  (lambda (fpath)
+   ;;    (start-process "open" "*open*" "open" fpath)))
+
+   ;; alternative
+   (setq bibtex-completion-pdf-open-function 'org-open-file)
+   #+END_SRC
+   
+   
